--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "express": "^4.17.1",
     "http-status": "^1.5.0",
     "sqlite": "^4.0.25",
-    "sqlite3": "^4.2.0"
+    "sqlite3": "^4.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.10",
